src/v7/CAPI_Generators.pas


end;
//------------------------------------------------------------------------------
procedure Generators_Set_kvar(Value: Double);cdecl;
begin
    IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                  TGeneratorObj(Active).Presentkvar := Value;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_kW(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                  TGeneratorObj(Active).PresentkW := Value;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_PF(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                  TGeneratorObj(Active).PowerFactor := Value;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_Phases(Value: Integer);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
       WITH ActiveCircuit.Generators Do Begin
           IF ActiveIndex<>0 THEN Begin
                TGeneratorObj(Active).Nphases := Value;
           End;
       End;
   End;
end;
//------------------------------------------------------------------------------
function Generators_Get_Count():Integer;cdecl;
begin
    If Assigned(Activecircuit) Then
          Result := ActiveCircuit.Generators.ListSize;
end;
//------------------------------------------------------------------------------
function Generators_Get_idx():Integer;cdecl;
begin
    if ActiveCircuit <> Nil then
       Result := ActiveCircuit.Generators.ActiveIndex
    else Result := 0;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_idx(Value: Integer);cdecl;
Var
    pGen:TGeneratorObj;
begin
    if ActiveCircuit <> Nil then   Begin
        pGen := ActiveCircuit.Generators.Get(Value);
        If pGen <> Nil Then ActiveCircuit.ActiveCktElement := pGen;
    End;

end;
//------------------------------------------------------------------------------
function Generators_Get_Model():Integer;cdecl;
begin
   Result := -1;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TGeneratorObj(Active).GenModel ;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_Model(Value: Integer);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                  With TGeneratorObj(Active) Do Begin
                     GenModel := Value;
                     // Handle side effect
                     If GenModel=3 Then ActiveCircuit.Solution.SolutionInitialized := FALSE ;
                  End;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
function Generators_Get_kVArated():Double;cdecl;
begin
   Result := -1.0;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TGeneratorObj(Active).Genvars.kVArating  ;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_kVArated(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                  With TGeneratorObj(Active) Do Begin
                     Genvars.kVArating  := Value;
                  End;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
function Generators_Get_Vmaxpu():Double;cdecl;
begin
   Result := -1.0;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TGeneratorObj(Active).Vmaxpu ;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
function Generators_Get_Vminpu():Double;cdecl;
begin
   Result := -1.0;
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                 Result := TGeneratorObj(Active).Vminpu ;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_Vmaxpu(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                  With TGeneratorObj(Active) Do Begin
                     VMaxPu  := Value;
                  End;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
procedure Generators_Set_Vminpu(Value: Double);cdecl;
begin
   IF ActiveCircuit<> NIL THEN Begin
         WITH ActiveCircuit.Generators Do Begin
             IF ActiveIndex<>0 THEN Begin
                  With TGeneratorObj(Active) Do Begin
                     VMinPu  := Value;
                  End;
             End;
         End;
   End;
end;
//------------------------------------------------------------------------------
END.
